fix: stack button on small screen and focus on timer

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 
 p {
 	margin: 0;
+	padding-left: 100px;
 }
 
 .display {
@@ -48,10 +49,11 @@ p {
 	display: flex;
 	margin-top: 25px;
 	margin-left: 10px;
+	flex-direction: column;
 }
 
 .buttons button {
-	margin: 15px;
+	margin: 10px;
 	border-radius: 50%;
 	height: 60px;
 	width: 60px;
